word2vec cbow formulas

--- a/biblio.bib
+++ b/biblio.bib
@@ -23,6 +23,16 @@
     number = {8}
 }
 
+@article{harris1954distributional,
+    author = {Zellig S Harris},
+    title = {istributional structure.},
+    journal = {Word},
+    year = {1954},
+    volume = {10},
+    pages = {146–162},
+    note = {http://www.tandfonline.com/doi/abs/10.1080/00437956.1954.11659520}
+}
+
 @article{Calibration,
     author = {A. Niculscu-Mizil, R. Caruana.},
     title = {Predicting good probabilities with supervised learning},
