--- a/rapport.tex
+++ b/rapport.tex
@@ -39,6 +39,8 @@
 \usepackage[normalem]{ulem}
 \usepackage{amssymb} % for mathbb
 \usepackage{outlines}
+% for quotes
+\usepackage{dirtytalk}
 
 % for diagrams
 \usepackage{tikz}
@@ -62,7 +64,7 @@
 
 % neural figures
 \usepackage{tikz}
-\def\layersep{2.5cm}
+\def\layersep{3cm}
 
 
 % for cases
