--- a/biblio.bib
+++ b/biblio.bib
@@ -60,3 +60,12 @@
     howpublished = {http://martin.zinkevich.org/rules_of_ml/rules_of_ml.pdf},
     note = {accessed: 2017-12}
 }
+
+@misc{stanfordLogistic,
+    author = {A. Ng, J. Ngiam, C-Y. Foo, Y. Mai, C. Suen, A. Coates, A. Maas, A. Hannun, B. Huval, T. Wang, S. Tandon},
+    title = {Stanford Deep Learning courses},
+    year = {2016},
+    howpublished = {http://ufldl.stanford.edu/tutorial/supervised/SoftmaxRegression/},
+    note = {accessed: 2017-12}
+}
+
