--- a/concl.tex
+++ b/concl.tex
@@ -9,6 +9,11 @@ During this project, we transformed a workflow dedicated to one multiclass field
 Machine learning hype drives attention mostly to models and algorithms. 
 Yet, this project convinced me that 90\% of a project success depends on pragmatism and implementation.
 
+Fields to explore ....
+
+Lot more to say when paper will be finished.
 
 \chapter*{Acknowledgment}
+Big up to @caillou for awesome ML and engineering skills
+
 \addcontentsline{toc}{chapter}{Acknowledgment}
