--- a/rapport.tex
+++ b/rapport.tex
@@ -155,8 +155,7 @@
 \geometry{top=2.5cm,left=2.6cm,right=2.6cm,bottom=2.5cm,headsep=1cm}
 \hypersetup{pdfborder={0 0 0},
 colorlinks,urlcolor=blue,linkcolor=blue,citecolor=blue,filecolor=blue,
-pdftitle=
-}
+pdftitle=}
 
 
 \begin{document}
@@ -187,6 +186,7 @@ pdftitle=
 \cleardoublepage
 \appendix
 \include{p_logistic_regression_multiclass_multilabel}
+\include{p_classification_metrics}
 \cleardoublepage
 
 \bibliographystyle{plain}
