--- a/p_machine_learning.tex
+++ b/p_machine_learning.tex
@@ -222,7 +222,6 @@ We can represent it as the following multilayer network:
 
     % Draw the input layer nodes
     \foreach \name / \y / \word in {1/1/to,2/2/classify,3/3/you,4/4/have,5/5/learn}
-    % This is the same as writing \foreach \name / \y in {1/1,2/2,3/3,4/4}
         \node[input neuron, pin=left: (\textit{\word}) $x_{\y}$ ] (I-\name) at (0,-0.5 -\y) {};
 
     % Draw the hidden layer nodes
@@ -235,9 +234,8 @@ We can represent it as the following multilayer network:
         \node[output neuron, pin=right:$\hat y_{\y}$ ] (O-\name) at (\layersep*2,-0.5 -\y) {};
 
     % Draw the true layer node
-
-	\foreach \name / \y in {1,...,5}
-        \node[true neuron, pin=right:$y_{\y}$ ] (T-\name) at (\layersep*3,-0.5 -\y) {};
+	\foreach \name / \y / \word in {1/1/to,2/2/classify,3/3/you,4/4/have,5/5/learn}
+        \node[true neuron, pin=right:$y_{\y} (\textit{  \word})$ ] (T-\name) at (\layersep*3,-0.5 -\y) {};
 
 
     % Connect every node in the input layer with every node in the
@@ -253,9 +251,9 @@ We can represent it as the following multilayer network:
 
     % Annotate the layers
     \node[annot,above of=H-1, node distance=2.5cm] (hl) {Hidden layer: $h$ of size \textit{dim}};
-    \node[annot,left of=hl] {Input layer: $x$ (size $|V|$)};
+    \node[annot,left of=hl] {Input layer: $\mathbf{x}$ (size $|V|$)};
     \node[annot,right of=hl] (ol) {Output layer: $\hat y$ of size $|V|$};
-    \node[annot,right of=ol] {Target: $y$ of size $|V|$};
+    \node[annot,right of=ol] {Target: $\mathbf{y}$ one hot vector of size $|V|$};
 
     \node[annot] (A) at (\layersep/2,-5) {$A$};
     \node[annot] (B) at (\layersep*3/2,-5) {$B$};
@@ -276,18 +274,122 @@ Transforming a text input in a numerical vector is then possible, and your numer
 
 Fasttext, which is essentially an extension of word2vec model, brings two major conceptual changes (in addition to a very efficient C++ implementation):
 \begin{itemize}
-	\item use of subword word information, instead of treating only word entities, which provides the following benefits:
-	\begin{itemize}
-		\item Generate better word embeddings for rare words (even if words are rare their character n grams are still shared with other words - hence the embeddings can still be good). In word2vec a rare word (e.g. 10 occurrences) has fewer neighbors to be tugged by, in comparison to a word that occurs 100 times - the latter has more neighbor context words and hence is tugged more often resulting in better word vectors.
-		\item Out of vocabulary words - they can construct the vector for a word from its character n grams even if word doesn't appear in training corpus. The choice of hyper parameters controlling the minimum and maximum n-gram sizes has to be chosen.
-	\end{itemize}
-	\item Simulatenous embedding and classification learning: in Word2Vec, we first build our embeddings, and then use it to translate words in features of low dimensionality for further classification. In fasttext, embedding and classification are different layers of a neural network that are trained simultaneously.
+	\item simulatenous embedding and classification learning: in Word2Vec, we first build our embeddings, and then use it to translate words in features of low dimensionality for further classification. In fasttext, embedding and classification are different layers of a neural network that are trained simultaneously.
+	\item use of subword word information, instead of treating only word entities
+\end{itemize}
+
+Details can be found in two papers published by Fasttext team: \cite[Enriching Word Vectors with Subword Information]{fasttextEnriching} and \cite[Bag of Tricks for Efficient Text Classification]{fasttextTricks}
+
+\subsubsection{Multiclass classification model}
+
+Let's consider the case where we have a training set of multiclass single-labeled sentences, for instance:
+\begin{itemize}
+	\item \textbf{feature}: \{I'm hungry\}, \textbf{target}: neutral 
+	\item \textbf{feature}: \{Get out\}, \textbf{target}: angry
+	\item \textbf{feature}: \{Nice to be there\}, \textbf{target}: happy
+	\item ...
+	\item \textbf{feature}: \{Do you want this apple\}, \textbf{target}: curious
+\end{itemize}
+With our target space being: \{happy, angry, neutral, curious\}, of size $K=4$
+
+What fasttext does, is that instead of first learning word embeddings on a corpus of text, it directly uses features to build specialized embeddings for this classification task.
+
+Denoting $\mathcal{Y} = \{y_i\}_{i \in [1, K]}$, and $\mathbf{x}$ the average of one hot-encoded vector of tokens of a feature in vocabulary $V$:
+\begin{align}
+ \mathbf{\hat y} = 
+	\begin{bmatrix} 
+		P(y_1 | \mathbf{x}) \\
+		\vdots \\
+		P(y_i | \mathbf{x})\\
+		\vdots \\
+		P(y_K | \mathbf{x})
+	\end{bmatrix} = 
+	softmax(B.A.\mathbf{x})
+\end{align}
+
+Ie $\forall i \in [1, K]$:
+\begin{align}
+ P(y_i | \mathbf{x})= 
+ 	&\frac{  [e^{B.A.\mathbf{x}}]_i}
+ 	{\sum_{j=1}^{K} [e^{B.A.x}]_i} \\
+ 	\text{      with}& []_i \text{ meaning the i-th element of a vector}
+\end{align}
+
+
+Whereas the true target is noted:
+\begin{align}
+ \mathbf{y} = 
+	\begin{bmatrix} 
+		y_1 \\
+		\vdots \\
+		y_i \\
+		\vdots \\
+		y_K
+	\end{bmatrix} 
+\end{align}
+wich is a one hot encoded vector corresponding to which is this sample label.
+
+
+The model is very similar to continuous bag of words model, except that instead of using the middle word of CBOW, we directly use a label. The architecture is then:
+\begin{tikzpicture}[shorten >=1pt,->,draw=black!50, node distance=\layersep]
+    \tikzstyle{every pin edge}=[<-,shorten <=1pt]
+    \tikzstyle{neuron}=[circle,fill=black!25,minimum size=17pt,inner sep=0pt]
+    \tikzstyle{input neuron}=[neuron, fill=yellow!50];
+    \tikzstyle{output neuron}=[neuron, fill=blue!50];
+    \tikzstyle{hidden neuron}=[neuron, fill=red!50];
+    \tikzstyle{true neuron}=[neuron, fill=green!50];
+    \tikzstyle{annot} = [text width=4em, text centered]
+
+    % Draw the input layer nodes
+    \foreach \name / \y / \word in {1/1/I,2/2/am,3/3/hungry,4/4/get,5/5/out, 6/6/nice, 7/7/apple}
+        \node[input neuron, pin=left:(\textit{\word  }) $x_{\y}$ ] (I-\name) at (0,-\y) {};
+
+    % Draw the hidden layer nodes
+    \foreach \name / \y in {1,...,3}
+        \node[hidden neuron] (H-\name) at (\layersep,-1 -\y) {};
+
+    % Draw the output layer node
+	\foreach \name / \y in {1,...,4}
+        \node[output neuron, pin=right:$f_{\y}$ ] (O-\name) at (\layersep*2,-0.5 -\y) {};
+
+    % Draw the true layer node
+
+	\foreach \name / \y / \label in {1/1/happy,2/2/neutral, 3/3/curious,4/4/angry}
+        \node[true neuron, pin=right:$y_{\y}$ (\textit{  \label})] (T-\name) at (\layersep*3,-0.5 -\y) {};
+
+    % Connect every node in the input layer with every node in the
+    % hidden layer.
+    \foreach \source in {1,...,7}
+        \foreach \dest in {1,...,3}
+            \path (I-\source) edge (H-\dest);
+
+    % Connect every node in the hidden layer with the output layer
+    \foreach \source in {1,...,3}
+        \foreach \dest in {1,...,4}
+	        \path (H-\source) edge (O-\dest);
+
+    % Annotate the layers
+    \node[annot,above of=H-1, node distance=2.5cm] (hl) {Hidden layer: $h$ of size \textit{dim}};
+    \node[annot,left of=hl] {Input layer: $\mathbf{x}$ (size $|V|$)};
+    \node[annot,right of=hl] (ol) {Output layer: $f$ of size $K$};
+    \node[annot,right of=ol] {Target: one hot vector $\mathbf{y}$ of size $K$};
+
+    \node[annot] (A) at (\layersep/2,-6) {$A$};
+    \node[annot] (B) at (\layersep*3/2,-5) {$B$};
+
+\end{tikzpicture}
+Note: 
+\begin{itemize}
+	\item for readibility just 7 words of the input features are considered.
+	\item fasttext first merge all features as one corpus to build vocabulary ($\rightarrow$ size of matrix A)
+	\item in practice, dimension of the hidden layer is between 50 and 300
+	\item input matrix A embeddings are specialized for this classification task and may not behave well for another classification task
 \end{itemize}
 
 \textbf{Subword information}
 
 Each word can be considered as a set of character ngrams. In Fasttext, a word vector is made of the sum of this character n grams. For example the word vector “apple” is a sum of the vectors of the n-grams:
-\begin{multicols}{3}
+\begin{multicols}{4}
 \begin{itemize}
 	\item “<ap”, 
 	\item “app”, 
@@ -302,43 +404,102 @@ Each word can be considered as a set of character ngrams. In Fasttext, a word ve
 	\item ”le>”
 \end{itemize}
 \end{multicols}
- (assuming hyperparameters for smallest ngram[minn] is 3 and largest ngram[maxn] is 6).
+Note: this behavious is controlled through hyperparameters controlling smallest ngram size ([minn]) and largest ngram size ([maxn]). For performance and memory size reasons, another hyperparameter ([bucket]) controls the maximum total number of tokens (word tokens + subword tokens).
+
+This provide the following advantages:
+\begin{itemize}
+	\item Generate better word embeddings for rare words (even if words are rare their character n grams are still shared with other words - hence the embeddings can still be good). In word2vec a rare word (e.g. 10 occurrences) has fewer neighbors to be tugged by, in comparison to a word that occurs 100 times - the latter has more neighbor context words and hence is tugged more often resulting in better word vectors.
+	\item Out of vocabulary words - they can construct the vector for a word from its character n grams even if word doesn't appear in training corpus. The choice of hyper parameters controlling the minimum and maximum n-gram sizes has to be chosen.
+\end{itemize}
+
+Concretely, the use of subword information will only impact:
+\begin{itemize}
+	\item how is built the vocabulary. It will not only contain words of the training corpus, but also all ngrams of these words. The vocabulary will thus be much bigger, but with shared properties between different words.
+	\item how features are encoded in this vocabulary: 'Do you want this apple' will not be encoded as the average of 5 one hot vectors \{do, you, want, this, apple\}, but as the average of one hot vectors of all tokens contained in the sentence \{<do>, <you, you>, <wa, wan, ant, nt> ...\}.
+\end{itemize}
+
+\subsubsection{Miscelanous}
+
+Optimization, hierarchical softmax, negative sampling, word-n-grams, text preprocessing etc..
 
 
-\cite[Enriching Word Vectors with Subword Information]{fasttextEnriching}
-\cite[Bag of Tricks for Efficient Text Classification]{fasttextTricks}
+\subsubsection{Fasttext parameters implementation}
 
-\subsubsection{Classification model}
+List of all parameters:
+\begin{multicols}{3}
+\begin{itemize}
+	\item \textit{epoch}
+	\item \textit{lr}
+	\item \textit{lrUpdateRate}
+	\item \textit{dim}
+	\item \textit{ws}
+	\item \textit{loss}
+	\item \textit{neg}
+	\item \textit{minCountLabel}
+	\item \textit{minCount}
+	\item \textit{minn}
+	\item \textit{maxn}
+	\item \textit{bucket}
+	\item \textit{t}
+\end{itemize}
+\end{multicols}
+
+Fasttext implementation lets you choose two parameters to control $\mu$ over time:
+\begin{itemize}
+	\item \textit{lr}: sets $\mu$ at initialization
+	\item \textit{lrUpdateRate}: how continuous \textit{vs} per steps \textit{lr} decays
+\end{itemize}
+
+The learning rate $\mu$ decrease linearly, from initial given parameter $lr$ to zero.
+
+
+
+
+
+\pagebreak
+\section{Multilabel classification}
+
+We already studied in previous section how we could compute efficient multi-class classification from natural language input. Yet in our project, most of the product attributes that we wanted to predict were multi-labeled.
+
+In this section, we will first make a quick review of the major algorithms and scoring metrics for multi-label classification, mainly based on the ~\cite[following paper]{MultilabelReview}. Then we will focus on another common approach in neural networks not detailed in the previous paper, that inspired us to modify fasttext algorithm to make it natively support multilabel classification.
+
+\subsection{Review on multi-label classification}
+
+\subsubsection{Scoring metrics}
+
+Multiclass classification metrics in appendix, here only multilabel versions we used.
+
+\subsubsection{Main approaches and algorithms}
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.55]{./images/machine-learning/multi-label-approaches.png}
+\caption{Categorization of representative multi-label learning algorithms being reviewed, \cite{MultilabelReview}.}
+\end{figure}
+
+
+
+
+\subsection{Neural network approach, how we adapted it to Fasttext}
+
+TODO: better introduce.
+
 Suppose a previous layer $h$ (taking a vector x of given size in ouput space of size d) as follow:
 \begin{align}
-	h 
+	\mathbf{h}
 	&= 
 	\begin{bmatrix} 
 		h_1 \\
 		h_2 \\
 		\vdots \\
 		h_{\textit{dim}}
-	\end{bmatrix}\\
-	&= A^{\top}x
+	\end{bmatrix}\\ 
+	= A^{\top}\mathbf{x}
 \end{align}
 
 
 \begin{align}
-	h_j = A^{(j)\top}x
+	h_j = A^{(j)\top}\mathbf{x}
 \end{align}
-
-With $A$ being the matrix of weights from input to hidden layer, of size $(\textit{dim}, V)$, ie dimension of vector embeddings $\times$ vocabulary size.
-\begin{align}
-	A &= \left[\begin{array}{cccc}| & | & | & | \\ A^{(1)} & A^{(2)} & \cdots & A^{(\textit{dim})} \\ | & | & | & | \end{array}\right]\\
-	A &= \left[
-		\begin{array}{cccc} 
-		  	-- & A_{(1)} & -- \\
-		  	-- & A_{(2)} & -- \\
-		  	&\vdots 	\\
-		  	-- & A_{(V)} & --
-		\end{array}\right]
-\end{align}
-
 
 
 Let's denote:
@@ -376,60 +537,8 @@ Plus, it is interpretable: if the $k^{th}$ component $y_k$ is:
 
 We can represent it as the following multilayer network:
 
-\begin{tikzpicture}[shorten >=1pt,->,draw=black!50, node distance=\layersep]
-    \tikzstyle{every pin edge}=[<-,shorten <=1pt]
-    \tikzstyle{neuron}=[circle,fill=black!25,minimum size=17pt,inner sep=0pt]
-    \tikzstyle{input neuron}=[neuron, fill=yellow!50];
-    \tikzstyle{output neuron}=[neuron, fill=blue!50];
-    \tikzstyle{hidden neuron}=[neuron, fill=red!50];
-    \tikzstyle{true neuron}=[neuron, fill=green!50];
-    \tikzstyle{annot} = [text width=4em, text centered]
 
-    % Draw the input layer nodes
-    \foreach \name / \y in {1,...,7}
-    % This is the same as writing \foreach \name / \y in {1/1,2/2,3/3,4/4}
-        \node[input neuron, pin=left:$x_{\y}$ ] (I-\name) at (0,-\y) {};
-
-    % Draw the hidden layer nodes
-    \foreach \name / \y in {1,...,3}
-        %\path[yshift=0.5cm] node[hidden neuron] (H-\name) at (\layersep,-\y cm) {};
-        \node[hidden neuron] (H-\name) at (\layersep,-1 -\y) {};
-
-    % Draw the output layer node
-    % \node[output neuron,pin={[pin edge={->}]right:Output}, right of=H-3] (O) {};
-
-	\foreach \name / \y in {1,...,4}
-        \node[output neuron, pin=right:$f_{\y}$ ] (O-\name) at (\layersep*2,-0.5 -\y) {};
-
-    % Draw the true layer node
-
-	\foreach \name / \y in {1,...,4}
-        \node[true neuron, pin=right:$y_{\y}$ ] (T-\name) at (\layersep*3,-0.5 -\y) {};
-
-
-    % Connect every node in the input layer with every node in the
-    % hidden layer.
-    \foreach \source in {1,...,7}
-        \foreach \dest in {1,...,3}
-            \path (I-\source) edge (H-\dest);
-
-    % Connect every node in the hidden layer with the output layer
-    \foreach \source in {1,...,3}
-        \foreach \dest in {1,...,4}
-	        \path (H-\source) edge (O-\dest);
-
-    % Annotate the layers
-    \node[annot,above of=H-1, node distance=2.5cm] (hl) {Hidden layer: $h$ of size \textit{dim}};
-    \node[annot,left of=hl] {Input layer: $x$ (size $V$)};
-    \node[annot,right of=hl] (ol) {Output layer: $f$ of size $K$};
-    \node[annot,right of=ol] {True layer: $y$ of size $K$};
-
-    \node[annot] (A) at (\layersep/2,-6) {$A$};
-    \node[annot] (B) at (\layersep*3/2,-5) {$B$};
-
-\end{tikzpicture}
-
-\subsubsection*{Gradient retropropagation}
+\subsubsection{Gradient retropropagation}
 
 
 \begin{align}
@@ -512,110 +621,24 @@ $A$ weights:
 	\right)
 \end{align}
 
-\subsection{Fasttext parameters implementation}
 
-List of all parameters:
-\begin{itemize}
-	\item \textit{epoch}
-	\item \textit{lr}
-	\item \textit{lrUpdateRate}
-	\item \textit{dim}
-	\item \textit{ws}
-	\item \textit{loss}
-	\item \textit{neg}
-	\item \textit{minCountLabel}
-	\item \textit{minCount}
-	\item \textit{minn}
-	\item \textit{maxn}
-	\item \textit{bucket}
-	\item \textit{t}
-\end{itemize}
-
-\subsection*{Dictionnary}
-
-\subsection*{Learning rate}
-
-Fasttext implementation lets you choose two parameters to control $\mu$ over time:
-\begin{itemize}
-	\item \textit{lr}: sets $\mu$ at initialization
-	\item \textit{lrUpdateRate}: how continuous \textit{vs} per steps \textit{lr} decays
-\end{itemize}
-
-The learning rate $\mu$ decrease linearly, from initial given parameter $lr$ to zero.
-
-
-
-
-
-\pagebreak
-\section{Multilabel classification}
-\subsection{Review of major algorithms}
-
-\begin{figure}[H]
-\centering
-\includegraphics[scale=0.45]{./images/machine-learning/multi-label-approaches.png}
-\caption{Categorization of representative multi-label learning algorithms being reviewed, \cite{MultilabelReview}.}
-\end{figure}
-
-\subsubsection{Neural network approach}
 
 \subsection{Multiclass/multilabel scoring metrics}
-\subsubsection{Regular binary metrics}
 
-
-Evaluation metrics should take into account the class imbalance between churners and non-churners. A greater cost should be associated with false negatives than with false positives: misidentify a potential churner costs far more to a company than identifying a non-churner as churner. Moreover, we are more interested in perfectly identifying those customers who are most likely to churn than perfectly identifying \textit{all} the potential churners.
-
-\subsubsection{Binary classification metrics}
-
-As we are in a binary classification problem, several metrics can be used to assess the performance of the models.
-
-Lets define some naming/metrics used in the following:
-
-{\ttfamily
-\begin{table}[H]
-    \centering
-    \begin{tabular}{ll}
-        \toprule
-        $TP / FP$          &    $true/false\ positives$ \\
-        $TN / FN$       &    $true/false\ negatives$  \\
-        $P$       &    $TP+FN$ \\
-        $N$    &    $TN + FP$ \\
-        $recall$      &    ${TP} / {P}$ \\
-        $precision$        &   ${TP} / {(TP+FP)}$ \\
-        \bottomrule
-    \end{tabular}
-\end{table}
-}
-
-Precision, recall and accuracy are often used to measure the classification quality of binary classifiers.
-
-
-\textbf{F-score}
-
-The $F_1$ is a measure of a classifier accuracy, computed as the harmonic mean of precision and recall: $$F_1= 2. \frac{precision.recall}{precision+recall}$$\tabularnewline
-This definition assign the same weight to precision and recall but depending on the problem, one can be more valuable than the other.
-
-To handle these constraints, the $F_\beta-score$ is adapted: in consists in the \textit{weighted} harmonic mean of recall and precision, assigning $\beta$ times as much importance to recall as precision: $$F_\beta = (1+\beta^2) \frac{precision.recall}{\beta^2.precision+recall}$$
-
-\textbf{Calibration plot} 
-
-When dealing with probabilistic classifiers, one of the signs that a suitable classification model has been found is also that predicted probabilities (scores) are well calibrated, that is that a fraction of about $p$ of events with predicted probability $p$ actually occurs. Calibration plot is a method that shows us how well the classifier is calibrated \cite{Calibration}: $$x = true\ probability,\ y=predicted\ probability$$
-
-True probabilities are calculated for (sub)sets of examples with the same predicted score $P(y=1|X) \in [c-\delta, c+\delta]$: $$ p_{true}^c = \frac{P_{sub}^c}{P_{sub}^c + N_{sub}^c}$$ with $P_{sub}^c, N_{sub}^c$ being the proportion on positives and negative examples in a given subset with predicted probabilities $[c-\delta, c+\delta]$. The calibration plot of a perfectly calibrated classifier will be a diagonal.
-
-
-
-\subsubsection{Adaptation to multiclass-multilabel: global / local metrics}
 
 
 \pagebreak
 \section{Calibration}
 
+After producing our first predictions, we soon realized that we needed more controll on probability scores computed by our models. For some classes, a 0.8 score would on average be right 0.5 of the time, on other classes it could be the opposite, a 0.5 score could be right 0.8 of the time on average.
+
+In this section we will first a naïve calibration implementation, and introduce more commonly adopted strategies.
+
 \subsection{Predictions precision/recall estimation}
 
-\section{Invalid/sparse data}
+\section{Missing labels}
 
-\subsection{Strategies to handle sparse data}
+\subsection{Strategies to handle incompletely labeled data}
 Consider recall rather than precision. The presence of a lot a FN will impact precision, not recall.
 
 \subsection{Iterative approach to bootstrap new classes}
@@ -623,6 +646,10 @@ Manually label some products with new classes, then focus validation on these pr
 
 After some iterations, there might be enough occurences to ensure sufficient scores.
 
+\section{Results}
+\subsection{Multiclass}
+\subsection{Multilabel}
+\subsection{Tuning strategies}
 
 \section{Misc}
 
